src/test/ui/resolve/bad-module.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/bad-module.rs:5:15
   |
LL |     let foo = foo::bar::baz();
   |               ^^^ use of undeclared crate or module `foo`

error[E0433]: failed to resolve: use of undeclared crate or module `thing`
  --> $DIR/bad-module.rs:2:15
   |
LL |     let foo = thing::len(Vec::new());
   |               ^^^^^ use of undeclared crate or module `thing`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
